# t5html

./: .gitignore  :w  License  Makefile  pyproject.toml
doc/: Read.4dev  Read.us  ReadMe.md  example.t5html  example3.t5html
doc/manpage/: t5html.1
meta/script/: test_on_modify.bash  watchtests.bash
src/: t5html.py
src/t5html/: __init__.py  importer.py  treebuilder.py
src/t5htmllib/: elementparser.py  lineparser.py  parsers.py  treebuilder.py
test/: test_element_line.py  test_line_parser.py  test_treebuilder.py
