[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t5html"
version = "23.01.19"
authors = [
  { name="splendor", email="splendor@tuta.io" },
]
description = "Converts text to html. Text muste be in t5html form."
readme = "doc/ReadMe.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""/issues


[tool.pytest.ini_options]
pythonpath = [ "src", ]
